Fix build errors and VoIP issues
